--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Ernesto Fuentes - Links</title> 
+    <title> Ernesto Fuentes - Links</title>
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
-    <h1>Hello World !</h1>
     <header>
       <img src="./images/profile.jpg" alt="profile photo">
+      <h1>@ErnestoFuentes</h1>
     </header>
       <ul>
         <li>
         <a href="https://ernestofuentes.xyz/">Official WebSite</a>
         </li>
-        <li>Linkedin</li>
-        <li>Github</li>
+        <li><a href="https://www.linkedin.com/in/ernesto---fuentes/">LinkedIn</a>
+        </li>
+        <li>
+        <a href="https://github.com/efuente2">Github</a>
+      </li>
       </ul>
   </body>
 </html>
