--- a/index.html
+++ b/index.html
@@ -3,22 +3,57 @@
   <head>
     <meta charset="utf-8">
     <title> Ernesto Fuentes - Links</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="./styles.css">
-  </head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+    <script>
+        window.addEventListener('DOMContentLoaded', () => {
+          VANTA.NET({
+            el: "#vanta",
+            mouseControls: true,
+            touchControls: true,
+            gyroControls: false,
+            minHeight: 200.00,
+            minWidth: 200.00,
+            scale: 1.00,
+            scaleMobile: 1.00,
+            backgroundAlpha: 0.0
+         })
+          setTimeout(() => {
+          const main = document.querySelector('main');
+          main.style.opacity = 1;
+          }, 1000)
+        })
+    </script>
+   </head>
   <body>
+    <div id="vanta">  
+    </div>
+    <main>
     <header>
       <img src="./images/profile.jpg" alt="profile photo">
       <h1>@ErnestoFuentes</h1>
     </header>
       <ul>
         <li>
-        <a href="https://ernestofuentes.xyz/">Official WebSite</a>
+        <a href="https://ernestofuentes.xyz/">
+          <img src="./images/home-icon-silhouette.svg" alt="HomePage" width="20">
+          Official WebSite 
+        </a>
         </li>
-        <li><a href="https://www.linkedin.com/in/ernesto---fuentes/">LinkedIn</a>
+        <li><a href="https://www.linkedin.com/in/ernesto---fuentes/">
+             <img src="./images/linkedin.svg" alt="LinkedIn" width="20"> 
+             LinkedIn
+      </a>
         </li>
         <li>
-        <a href="https://github.com/efuente2">Github</a>
+        <a href="https://github.com/efuente2">
+          <img src="./images/Octicons-mark-github.svg" alt="GitHub" width="20"> 
+          Github
+        </a>
       </li>
       </ul>
+  </main>
   </body>
 </html>
